--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-mocks": "~1.2.0",
     "angular-ui-router": "0.2.7",
     "less": "~1.5.1",
-    "moment": "~2.4.0"
+    "moment": "~2.4.0",
+    "ionic": "~0.9.27"
   }
 }
