--- a/.drone.yml
+++ b/.drone.yml
@@ -22,3 +22,12 @@ notify:
     on_failure: true
     on_success: true
 
+publish:
+  s3:
+    acl: public-read
+    region: eu-west-1
+    bucket: dashboard.iteam.se
+    access_key: {{AWS_ACCESS_KEY_ID}}
+    secret_key: {{AWS_SECRET_ACCESS_KEY}}
+    source: /dist/
+    target: latest/
