--- a/.drone.yml
+++ b/.drone.yml
@@ -29,5 +29,5 @@ publish:
     bucket: dashboard.iteam.se
     access_key: {{AWS_ACCESS_KEY_ID}}
     secret_key: {{AWS_SECRET_ACCESS_KEY}}
-    source: /dist/
-    target: latest/
+    source: dist/
+    target: /
