--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "angular-ui-router": "~0.2.10",
     "less": "~1.5.1",
     "moment": "~2.4.0",
-    "ionic": "driftyco/ionic-bower",
+    "ionic": "master",
     "angularjs-nvd3-directives" : "~0.0.7"
   }
 }
