--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
     "less": "~1.5.1",
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
-    "ionic": "driftyco/ionic-bower#master"
+    "ionic": "driftyco/ionic-bower#master",
+    "nvd3": "~1.1.15-beta"
+  },
+  "resolutions": {
+    "d3": "~3.4.1"
   }
 }
