--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "less": "~1.5.1",
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
-    "ionic": "driftyco/ionic-bower#master"
+    "ionic": "driftyco/ionic-bower#master",
+    "angular-md5": "~0.1.7"
   }
 }
