Made it work in safari

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-resource": "~1.2.0",
     "angular-mocks": "~1.2.0",
     "angular-ui-router": "~0.2.10",
-    "less": "~1.5.1",
+    "mrwhite-less-mixins": "^0.3.5",
+    "less": "^1.7.4",
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
     "ionic": "driftyco/ionic-bower#master",
