--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,15 @@
     "angular-resource": "~1.2.0",
     "angular-mocks": "~1.2.0",
     "angular-ui-router": "~0.2.10",
-    "mrwhite-less-mixins": "^0.3.5",
-    "less": "^1.7.4",
+    "mrwhite-less-mixins": "~0.4.1",
+    "less": "~1.7.5",
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
     "ionic": "driftyco/ionic-bower#master",
     "nvd3": "~1.1.15-beta"
   },
   "resolutions": {
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "mrwhite-less-mixins": "~0.4.1"
   }
 }
