--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "grunt-contrib-uglify": "^0.2.7",
     "grunt-contrib-watch": "^0.4.4",
     "grunt-dom-munger": "^2.0.1",
+    "grunt-mocha": "^0.4.11",
     "grunt-ngmin": "0.0.2",
+    "grunt-s3": "^0.2.0-alpha.3",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
