--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
     "ionic": "driftyco/ionic-bower#master",
-    "nvd3": "~1.1.15-beta"
+    "nvd3": "~1.1.15-beta",
+    "add-to-homescreen": "~3.0.7"
   },
   "resolutions": {
     "d3": "~3.4.1"
