--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "add-to-homescreen": "~3.0.7"
   },
   "resolutions": {
-    "d3": "~3.4.1"
+    "d3": "~3.4.1",
+    "angular": "~1.2.17"
   }
 }
