--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,17 @@
     "less": "~1.7.5",
     "moment": "~2.4.0",
     "angularjs-nvd3-directives": "~0.0.7",
-    "ionic": "driftyco/ionic-bower#master",
+    "ionic": "~0.9.27",
     "nvd3": "~1.1.15-beta",
-    "add-to-homescreen": "~3.0.7"
+    "add-to-homescreen": "~3.0.7",
+    "angular-animate": "~1.3.8"
   },
   "resolutions": {
     "d3": "~3.4.1",
-    "angular": "~1.2.17"
+    "angular": "~1.2.17",
+    "angular-animate": "1.2.12",
+    "angular-ui-router": "0.2.7",
+    "ionic": "master",
+    "angular-sanitize": "1.2.12"
   }
 }
