--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,7 @@
   "eqnull": true,
   "browser": true,
   "smarttabs": true,
+  "asi": true,
   "globals": {
     "angular": true,
     "console": true,
