--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "postinstall": "node node_modules/bower/bin/bower install"
   },
+  "standard": {
+    "globals": [ "angular", "moment" ]
+  },
   "devDependencies": {
     "chai": "^1.9.1",
     "grunt-angular-templates": "^0.3.12",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.3.0",
     "grunt-contrib-connect": "^0.5.0",
@@ -22,6 +26,7 @@
     "grunt-mocha": "^0.4.11",
     "grunt-ngmin": "0.0.2",
     "grunt-s3": "^0.2.0-alpha.3",
+    "grunt-standard": "^2.0.0",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
